[package]
name = "srcds_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
eframe = {version = "0.18.0", features = ["persistence"]}
open = "3.0.2"
rfd = "0.10.0"
serde = "1.0.142"
strum_macros = "0.24.2"
walkdir = "2.3.2"

